@@ -1,5 +1,8 @@
 ---
-Fixing type video issue in modules/newsetter
+Fiexd type video inssue in modules/newsletter.js
+Fixed messages fetch limit (increased from 1 to 10) in modules/newsletter.js
+---
+Fixing type video issue in modules/newsletter.js
 Changed updating time in index.js
 modules/statistic.js files array (frames) refactor to sort()
 new commands group - mt.js
